--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -19,7 +19,7 @@
     <ScrollView
         android:layout_below="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content" >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_toRightOf="@+id/frame_image"
                 android:layout_toEndOf="@+id/frame_image"
-                android:textSize="25sp"
+                android:textSize="26sp"
                 android:textColor="@color/black"
                 android:text="Username"
                 android:layout_width="wrap_content"
@@ -71,15 +71,15 @@
 
                 <ImageView
                     android:layout_margin="8dp"
-                    android:src="@drawable/pencil1"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp" />
+                    android:src="@drawable/ic_write"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
 
                 <TextView
                     android:id="@+id/tv21"
                     android:layout_margin="8dp"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:text="Edit"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
@@ -98,7 +98,7 @@
                 <TextView
                     android:id="@+id/tv_user_profile_name"
                     android:layout_margin="5dp"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/black"
                     android:text="Name"
                     android:layout_width="match_parent"
@@ -107,7 +107,7 @@
                 <TextView
                     android:id="@+id/tv_user_profile_email"
                     android:layout_margin="5dp"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/black"
                     android:text="Email"
                     android:layout_width="match_parent"
@@ -116,7 +116,7 @@
                 <TextView
                     android:id="@+id/tv_user_profile_phone_number"
                     android:layout_margin="5dp"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/black"
                     android:text="Phone"
                     android:layout_width="match_parent"
@@ -125,7 +125,7 @@
                 <TextView
                     android:id="@+id/tv_user_profile_dob"
                     android:layout_margin="5dp"
-                    android:textSize="20sp"
+                    android:textSize="24sp"
                     android:textColor="@color/black"
                     android:text="Date Of Birth"
                     android:layout_width="match_parent"
@@ -141,7 +141,7 @@
                     <TextView
                         android:layout_gravity="center"
                         android:id="@+id/tv_user_profile_gender"
-                        android:textSize="20sp"
+                        android:textSize="24sp"
                         android:textColor="@color/black"
                         android:text="Gender"
                         android:layout_width="match_parent"
@@ -149,17 +149,17 @@
 
                     <ImageView
                         android:id="@+id/user_profile_gender_image"
-                        android:layout_marginStart="8dp"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginLeft="8dp" />
+                        android:layout_marginStart="10dp"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginLeft="10dp" />
 
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_user_profile_description"
                     android:layout_margin="5dp"
-                    android:textSize="20sp"
+                    android:textSize="22sp"
                     android:textColor="@color/black"
                     android:text="About Me"
                     android:layout_width="match_parent"
@@ -175,7 +175,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/fab_home" />
